--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -1,6 +1,7 @@
 $color-primary: #108eea;
 $color-primary-light: #92c3ff;
 $color-primary-dark: rgb(6, 66, 177);
+$color-primary-night: #00213a;
 
 $color-light: #fff;
 $color-gray: #444343;
