--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -1,7 +1,34 @@
 .sidebar
-    a(href="#") my links!!
-    a(href="#") my links!!
-    a(href="#") my links!!
-    a(href="#") my links!!
-    a(href="#") my links!!
-    a(href="#") my links!!
+    .sidebar__btn
+        span Welcome Ajay
+        svg.sidebar__btn--close-nav 
+            use(xlink:href="src/img/icon-pack-2.svg#cancel")
+    .sidebar__list
+
+        a(href="#").sidebar__list--item
+            svg.sidebar__list--item-icon 
+                use(xlink:href="src/img/icon-pack-2.svg#home")  
+            | Home
+
+        a(href="#").sidebar__list--item
+            svg.sidebar__list--item-icon
+                use(xlink:href="src/img/icon-pack-2.svg#medicine") 
+            | Pharmacy
+
+        a(href="#").sidebar__list--item
+            svg.sidebar__list--item-icon
+                use(xlink:href="src/img/icon-pack-2.svg#caduceus-symbol") 
+            | Hospitals
+
+        a(href="#").sidebar__list--item
+            svg.sidebar__list--item-icon 
+                use(xlink:href="src/img/icon-pack-2.svg#user") 
+            | Profile
+
+        a(href="#").sidebar__list--item
+            svg.sidebar__list--item-icon 
+                use(xlink:href="src/img/icon-pack-2.svg#coronavirus") 
+            | Corona virus
+    .sidebar__about
+        p version 1.0
+            
