--- a/views/components/app_sponser.pug
+++ b/views/components/app_sponser.pug
@@ -1,12 +1,14 @@
 section.self-sponser
 
     .self-sponser--card
-        img(src="src/img/user.svg", alt="")
-        h2.self-sponser--card--head Meso: The Best Healthcare Management App.
-        p.self-sponser--card--tag medical service online
-        a(href="#").self-sponser--card--link-btn Download Now.
+        .self-sponser--card-container
+            img(src="src/img/user.svg", alt="").self-sponser--card-container--playstore
+            h2.self-sponser--card-container--head Meso: The Best Healthcare Management App.
+            p.self-sponser--card-container--tag medical service online
+            a(href="#").self-sponser--card-container--link-btn Download Now.
+        img(src="src/img/iphone-dummy.png", alt="").self-sponser--card-container--bg
 
-    img(src="src/img/iphone-dummy.png", alt="").sponser-bg
+
 
     .sponser__content
         h1 Download Now!
