--- a/sass/components/_app_sponser_section.scss
+++ b/sass/components/_app_sponser_section.scss
@@ -3,70 +3,112 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
-    height: 44rem;
+    padding: $padding-lg 0;
     overflow: hidden;
     margin: 9rem 0;
 
+    @media (max-width: 980px) {
+        flex-direction: column;
+    }
+
+
     &--card {
-        padding: $padding-sm;
-        background-color: $color-light;
-        margin: 3rem;
-        border-radius: 3px;
-        border: 1px solid $color-gray-light;
-        width: 37rem;
-        height: 17rem;
-        display: grid;
-        grid-gap: 2px;
-        grid-template-columns: 8rem 1fr;
-        grid-template-rows: 1fr .5fr 1fr;
+        position: relative;
 
-        img {
-            width: 5rem;
-            align-items: center;
-            grid-row: 1/3;
-            justify-self: center;
+        @media (max-width: 980px) {
+            width: 100%;
+            height: 30rem;
+            overflow: hidden;
         }
 
-        &--head {
-            font-size: 2rem;
-            grid-row: 1/2;
-            grid-column: 2/4;
-        }
-
-        &--tag {
-            color: $color-green-light;
-            font-size: 1.4rem;
-            grid-row: 2/3;
-            grid-column: 2/4;
-        }
-
-        &--link-btn {
+        &-container {
+            position: relative;
             padding: $padding-sm;
-            background-color: $color-green-light;
-            color: $color-light;
-            border-radius: 2px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 1.6rem;
-            grid-column: 1/ span 2;
-            height: 4rem;
+            background-color: $color-light;
+            margin: 3rem;
+            border-radius: 3px;
+            border: 1px solid $color-gray-light;
+            width: 37rem;
+            height: 17rem;
+            display: grid;
+            grid-gap: 2px;
+            grid-template-columns: 8rem 1fr;
+            grid-template-rows: 1fr .5fr 1fr;
+            overflow: hidden;
+
+            @media (max-width: 980px) {
+                margin: 10rem auto;
+
+            }
+
+            &--playstore {
+                width: 5rem;
+                align-items: center;
+                grid-row: 1/3;
+                justify-self: center;
+            }
+
+            &--bg {
+                position: absolute;
+                left: -3.5rem;
+                top: -6rem;
+                z-index: -10;
+                width: 50rem;
+
+                @media (max-width: 980px) {
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    top: -0.5rem;
+                    z-index: -10;
+                    width: 50rem;
+                    margin-right: auto;
+                    margin-left: auto;
+                    display: block;
+                }
+            }
+
+
+
+            &--head {
+                font-size: 2rem;
+                grid-row: 1/2;
+                grid-column: 2/4;
+            }
+
+            &--tag {
+                color: $color-green-light;
+                font-size: 1.4rem;
+                grid-row: 2/3;
+                grid-column: 2/4;
+            }
+
+            &--link-btn {
+                padding: $padding-sm;
+                background-color: $color-green-light;
+                color: $color-light;
+                border-radius: 2px;
+                text-align: center;
+                text-decoration: none;
+                font-size: 1.6rem;
+                grid-column: 1/ span 2;
+                height: 4rem;
+            }
         }
     }
+
 }
 
-.sponser-bg {
-    height: 94rem;
-    position: absolute;
-    left: 13rem;
-    top: 0;
-    z-index: -10;
-}
+
 
 .sponser__content {
     text-align: center;
     letter-spacing: 3px;
     width: 43%;
 
+    @media (max-width: 980px) {
+        width: 95%;
+    }
 
     & h1 {
         font-size: 2rem;
