--- a/sass/components/_landing.scss
+++ b/sass/components/_landing.scss
@@ -5,6 +5,12 @@
     height: 40rem;
     width: 100%;
 
+    @media (max-width: 980px) {
+        height: 30rem;
+        padding: $padding-m 0;
+
+    }
+
     & img {
         z-index: -5;
         height: 100%;
@@ -12,6 +18,10 @@
         object-fit: cover;
         object-position: bottom;
         border-radius: 3px;
+
+        @media (max-width: 980px) {
+            border-radius: 0;
+        }
     }
 
     &--nxt-btn {
@@ -20,11 +30,21 @@
         right: 3rem;
         cursor: pointer;
 
+        @media (max-width: 980px) {
+            top: 45%;
+        }
+
         svg {
             width: 5rem;
+            height: 5rem;
 
             use {
                 fill: #fff;
+            }
+
+            @media (max-width: 980px) {
+                width: 3rem;
+                height: 3rem;
             }
         }
     }
@@ -35,12 +55,22 @@
         left: 3rem;
         cursor: pointer;
 
+        @media (max-width: 980px) {
+            top: 45%;
+        }
+
         svg {
             transform: rotate(180deg);
             width: 5rem;
+            height: 5rem;
 
             use {
                 fill: #fff;
+            }
+
+            @media (max-width: 980px) {
+                width: 3rem;
+                height: 3rem;
             }
         }
     }
@@ -57,9 +87,13 @@
         text-align: center;
         background-color: $color-light;
         font-size: 3rem;
-
         transform: skew(0, -9deg);
         padding: 0 3rem;
+
+        @media (max-width: 980px) {
+            font-size: 2.5rem;
+        }
+
     }
 
     p {
@@ -73,8 +107,13 @@
         width: 47rem;
         background-color: $color-light;
         font-size: 2.5rem;
-
         transform: skew(0, -9deg);
         padding: 0 3rem;
+
+        @media (max-width: 980px) {
+            font-size: 2rem;
+            width: 39rem;
+
+        }
     }
 }
