--- a/sass/components/_review-card.scss
+++ b/sass/components/_review-card.scss
@@ -7,9 +7,6 @@
         align-items: center;
         flex-direction: column;
 
-
-
-
         &--content {
             width: 50rem;
             font-size: 5rem;
@@ -22,7 +19,12 @@
                 font-size: 2rem;
                 color: $color-gray;
 
+                @media (max-width: 980px) {
+    font-size: 1.5rem;
+}
+
             }
+
         }
 
         &--author-image {
