--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,15 +7,27 @@
     left: 0;
     width: 100%;
     padding: $padding-sm;
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    height: 5rem;
     box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.8);
+
+    @media (max-width: 980px) {
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
 
     &__logo {
         color: $color-light;
         font-size: 1.8rem;
+
+        @media (max-width: 980px) {
+            grid-row: 1/2;
+            grid-column: 1/2;
+        }
     }
 
     &__searchbar {
@@ -45,12 +57,25 @@
                 }
             }
         }
+
+        @media (max-width: 980px) {
+            grid-row: 2/3;
+            grid-column: 1/3;
+            width: 100%;
+            margin: 1rem auto 0;
+        }
     }
 
 
     &__link {
+        justify-self: right;
         display: flex;
         align-items: center;
+
+        @media (max-width: 980px) {
+            grid-row: 1/2;
+            grid-column: 2/3;
+        }
 
         &--btn {
             text-decoration: none;
@@ -71,30 +96,29 @@
 
         }
 
-        &--user-profile {
-            margin: 0 1.5rem;
-            width: 3.5rem;
+
+        &--user {
+
+            &-profile {
+                margin: 0 1.5rem;
+
+                @media (max-width: 980px) {
+                    // margin: 0 .5rem;
+                }
+            }
+
+            &-icon {
+                margin: 0 1.5rem;
+                fill: $color-light;
+                width: 3rem;
+                height: 3rem;
+            }
         }
 
-        &--user-name {
-            font-weight: 600;
-            font-size: 1.7rem;
-            color: $color-light;
-        }
+
 
         &--item {
-            display: flex;
-            flex-direction: column;
-            padding: 0 1rem;
             cursor: pointer;
-
-            & span {
-                height: .4rem;
-                width: .4rem;
-                border-radius: 50%;
-                background-color: $color-light;
-                margin: .2rem;
-            }
         }
     }
 }
