--- a/views/components/_features.pug
+++ b/views/components/_features.pug
@@ -3,18 +3,18 @@ section.features
         .feature__card--icon
             svg
                 use(xlink:href="src/img/icons.svg#video-conference")
-        .feature__card--title
+        .feature__card--title.primary__heading
             h4 Consult with doctor online.
-        .feature__card--description
+        .feature__card--description.primary__paragraph
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum quibusdam corrupti deleniti sit molestiae sequi!
 
     .feature__card
         .feature__card--icon
             svg
                 use(xlink:href="src/img/icons.svg#checkmark")
-        .feature__card--title
+        .feature__card--title.primary__heading
             h4 All india verified doctors
-        .feature__card--description
+        .feature__card--description.primary__paragraph
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum quibusdam corrupti deleniti sit molestiae sequi!
 
 
@@ -22,9 +22,9 @@ section.features
         .feature__card--icon
             svg
                 use(xlink:href="src/img/icons.svg#first-aid-kit")
-        .feature__card--title
+        .feature__card--title.primary__heading
             h4 Free Health Tips.
-        .feature__card--description
+        .feature__card--description.primary__paragraph
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum quibusdam corrupti deleniti sit molestiae sequi!
 
 
@@ -32,9 +32,9 @@ section.features
         .feature__card--icon
             svg
                 use(xlink:href="src/img/icons.svg#discount")
-        .feature__card--title
+        .feature__card--title.primary__heading
             h4 Get great discounts on your booking
-        .feature__card--description
+        .feature__card--description.primary__paragraph
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum quibusdam corrupti deleniti sit molestiae sequi!
 
 
@@ -42,7 +42,7 @@ section.features
         .feature__card--icon
             svg
                 use(xlink:href="src/img/icons.svg#qr-code")
-        .feature__card--title
+        .feature__card--title.primary__heading
             h4 Book appointment and check pay with QR
-        .feature__card--description
+        .feature__card--description.primary__paragraph
             p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum quibusdam corrupti deleniti sit molestiae sequi!
