--- a/views/components/_review-card.pug
+++ b/views/components/_review-card.pug
@@ -4,7 +4,7 @@ section.reviews.slider
         .review__card
             p.review__card--content 
                 |"
-                span Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
+                span.primary__paragraph Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
     
             img(src="src/img/logo-primary.jpg", alt="Review Author").review__card--author-image
             span.review__card--author-name Rahul singh
@@ -13,7 +13,7 @@ section.reviews.slider
         .review__card
             p.review__card--content 
                 |"
-                span Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
+                span.primary__paragraph Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
     
             img(src="src/img/logo-primary.jpg", alt="Review Author").review__card--author-image
             span.review__card--author-name Ananya pandey
@@ -22,7 +22,7 @@ section.reviews.slider
         .review__card
             p.review__card--content 
                 |"
-                span Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
+                span.primary__paragraph Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet quasi nemo veritatis. Sequi quam at tenetur eum perspiciatis ab.
     
             img(src="src/img/logo-primary.jpg", alt="Review Author").review__card--author-image
             span.review__card--author-name Ajay yadav
