--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&family=Roboto:wght@100;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
 footer {
   padding: 1rem;
   width: 100%;
@@ -82,10 +83,11 @@ footer {
     .navigation__link--user-profile {
       margin: 0 1.5rem; }
     .navigation__link--user-icon {
-      margin: 0 1.5rem;
+      margin: 0 1rem;
       fill: #fff;
-      width: 3rem;
-      height: 3rem; }
+      width: 2.5rem;
+      height: 2.5rem;
+      cursor: pointer; }
     .navigation__link--item {
       cursor: pointer; }
 
@@ -458,12 +460,10 @@ footer {
         fill: #0b8d0b; }
     .features .feature__card--title {
       grid-column: 2/3;
-      grid-row: 1/2;
-      font-size: 1.9rem; }
+      grid-row: 1/2; }
     .features .feature__card--description {
       grid-column: 2/3;
       grid-row: 2/3;
-      font-size: 1.7rem;
       color: #444343; }
 
 .reviews .review__card {
@@ -472,18 +472,14 @@ footer {
   align-items: center;
   flex-direction: column; }
   .reviews .review__card--content {
-    width: 50rem;
+    width: 75%;
     font-size: 5rem;
     line-height: 2rem;
     color: #a7a6a6;
     text-align: center;
     margin: 1rem 0; }
     .reviews .review__card--content span {
-      font-size: 2rem;
       color: #444343; }
-      @media (max-width: 980px) {
-        .reviews .review__card--content span {
-          font-size: 1.5rem; } }
   .reviews .review__card--author-image {
     width: 8rem;
     border-radius: 50%;
@@ -514,6 +510,49 @@ footer {
   @media (max-width: 980px) {
     .primary__section__description {
       font-size: 1.3rem; } }
+
+.section__heading--main {
+  font-weight: 700;
+  font-size: 4rem;
+  margin: 2rem 0 .5rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 3px;
+  width: 100%;
+  text-align: center; }
+  @media (max-width: 980px) {
+    .section__heading--main {
+      font-size: 3rem;
+      font-weight: 400; } }
+
+.section__heading--sub {
+  font-size: 3rem;
+  font-weight: 600;
+  margin: .5rem 0;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 3px;
+  width: 100%;
+  text-align: center; }
+  @media (max-width: 980px) {
+    .section__heading--sub {
+      font-size: 1.9rem;
+      font-weight: 300;
+      letter-spacing: 1.5px; } }
+
+.primary__heading {
+  font-size: 2.8rem;
+  font-weight: 500; }
+  @media (max-width: 980px) {
+    .primary__heading {
+      font-size: 2.3rem;
+      font-weight: 500; } }
+
+.primary__paragraph {
+  font-size: 1.6rem;
+  font-weight: 400; }
+  @media (max-width: 980px) {
+    .primary__paragraph {
+      font-size: 1.4rem;
+      font-weight: 400; } }
 
 html {
   font-size: 62.5%;
