--- a/views/home.pug
+++ b/views/home.pug
@@ -18,16 +18,17 @@ html(lang="en")
             //- -----Landing section-----
             include components/_landing
 
-            h1.primary__section__heading Features
+            h1.section__heading--main Features
+            p.section__heading--sub Lorem, ipsum dolor.
             include components/_features
 
-            h1.primary__section__heading Get our app on Playstore
-            p.primary__section__description Lorem ipsum dolor sit amet Lorem, ipsum..
+            h1.section__heading--main Get our app on Playstore
+            p.section__heading--sub Lorem ipsum dolor sit amet Lorem, ipsum..
             include components/app_sponser
 
 
-            h1.primary__section__heading What people say about us ?
-            p.primary__section__description Lorem ipsum dolor sit amet.
+            h1.section__heading--main What people say about us ?
+            p.section__heading--sub Lorem ipsum dolor sit amet.
             include components/_review-card
 
         //-----footer-----
